--- a/index.html
+++ b/index.html
@@ -79,12 +79,7 @@
  	 				<i class="fas fa-asterisk"></i>
  	 			</div>
  			 </div>
- 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- 			 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- 			 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- 			 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- 			 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- 			 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ 			 <p>Experience a culinary journey across the globe at Rosa Foods, where we bring you the finest flavors from every continent. Our expert chefs craft exquisite dishes using the freshest ingredients to create a dining experience like no other. Founded in 2022, Rosa Foods was born out of a love for travel and food. Our founders have traveled the world, gathering recipes and inspiration from the best kitchens and street markets. Their vision was to create a place where guests can enjoy a world-class dining experience without leaving the city.</p>
  			 <a href="#" class="btn body-btn">About Us</a>
  		</div>
  		<div class="restaurant-info-img aminate-right">
@@ -127,12 +122,25 @@
 					</div>
 				</div>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Embark on a gastronomic adventure with our diverse menu. From Italian pasta and Japanese sushi to Indian curry and Mexican tacos, every dish is a testament to the rich culinary heritage of its origin. Our chefs use only the finest ingredients to ensure every bite is a burst of flavor.
+
+Appetizers:
+
+Bruschetta (Italy),
+Gyoza (Japan),
+Samosas (India)
+
+Main Courses:
+
+Pad Thai (Thailand),
+Beef Stroganoff (Russia),
+Chicken Tikka Masala (India),
+Paella (Spain)
+Desserts:
+
+Tiramisu (Italy),
+Mochi (Japan),
+Baklava (Greece)
 				</p>
 				<a href="#" class="btn body-btn">View the full menu</a>
 			</div>
@@ -166,12 +174,17 @@
  	 				<i class="fas fa-asterisk"></i>
  	 			</div>
  			 </div>
- 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- 			 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- 			 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- 			 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- 			 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- 			 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ 			 <p>Discover the creativity and expertise of our culinary team with our Chef's Special menu. These exclusive dishes are crafted with seasonal ingredients and innovative techniques, offering a unique dining experience that changes with each visit.</p>
+			 
+			 <div class="events">
+				<h2>Events</h2>
+				Private Events
+				Celebrate your special occasions at Rosa Foods. Whether it's a birthday, anniversary, corporate event, or wedding reception, our elegant venue and attentive staff will ensure your event is unforgettable. Contact us to learn more about our customizable event packages.
+				
+				<h2>Reservations</h2>
+				Book a Table
+				Reserve your table at Rosa Foods and experience a world of flavors. Use our online reservation system or call us at +2348169790589 to book your spot. We look forward to welcoming you!
+			 </div>
  			 <a href="#" class="btn body-btn">Make a reservation</a>
  		</div>
  		<div class="image-group">
@@ -191,12 +204,7 @@
  				<h4>About Rosa</h4>
  				<div class="asterisk"><i class="fas fa-asterisk"></i></div>
  				<p>
- 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
- 					tempor inscididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
- 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
- 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
- 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					At Rosa Foods, we celebrate the diversity of global cuisine. Our menu features a carefully curated selection of dishes from Europe, Asia, Africa, the Americas, and beyond. Each dish is prepared with authenticity and passion, offering a taste of tradition with a modern twist.
  				</p>
  			</div>
  			<div class="footer-content-divider animate-bottom">
@@ -228,6 +236,8 @@
  							<i class="fas fa-envelope"></i>
  						</button>
  					</form>
+
+					<p class="phone">Phone: +2348169790589</p>
  				</div>
  			</div>
  		</div>
